Fix spacings in comment reply thread

--- a/style.css
+++ b/style.css
@@ -180,7 +180,8 @@ header:not(.is-being-sticky) {
 	}
 }
 
-.wp-block-post-comments-form .comment-form p {
+.wp-block-post-comments-form .comment-form p,
+.wp-block-post-comments-form h3 {
 	margin-block-start: 0;
 	margin-block-end: 0;
 }
@@ -219,6 +220,14 @@ header:not(.is-being-sticky) {
 	grid-column: 1 / 2;
 }
 
+.wp-block-comments-query-loop .wp-block-comment-template .wp-block-comment-author-name {
+	margin-bottom: var(--wp--custom--comment-gap-small);
+}
+
+.wp-block-comments-query-loop .wp-block-comment-template .wp-block-comment-content p {
+	margin-block-start: var(--wp--custom--comment-gap-medium);
+	margin-block-end: var(--wp--custom--comment-gap-small);
+}
 /*
  * Link styles
  */
